[gd_scene load_steps=11 format=3 uid="uid://b60suko7qmc01"]

[ext_resource type="Script" path="res://Scenes/Enemies/Scout.gd" id="1_68r78"]
[ext_resource type="Texture2D" uid="uid://53hgw2hjel10" path="res://Assets/Premium Platformer Asset Pack/Enemies/Mad_Marshmallow.png" id="2_1j43g"]
[ext_resource type="PackedScene" uid="uid://2ee73vp5aav5" path="res://Scenes/Enemies/vision_cone.tscn" id="3_rufd5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xbux5"]
atlas = ExtResource("2_1j43g")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci2we"]
atlas = ExtResource("2_1j43g")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0auao"]
atlas = ExtResource("2_1j43g")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx7dk"]
atlas = ExtResource("2_1j43g")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ha72b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci2we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0auao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx7dk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1138"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jhsd"]
size = Vector2(7, 6)

[node name="Scout" type="CharacterBody2D" groups=["Creature"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_68r78")

[node name="Flip" type="Node2D" parent="."]

[node name="Animation" type="AnimatedSprite2D" parent="Flip"]
sprite_frames = SubResource("SpriteFrames_ha72b")

[node name="GroundDetector" type="Area2D" parent="Flip"]
collision_layer = 0

[node name="CollisionSquare" type="CollisionShape2D" parent="Flip/GroundDetector"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_t1138")

[node name="VisionCone" parent="Flip" instance=ExtResource("3_rufd5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_8jhsd")

[node name="TurnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="FleeTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="LookoutTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="detected" from="Flip/VisionCone" to="." method="_on_vision_cone_detected"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="timeout" from="FleeTimer" to="." method="_on_flee_timer_timeout"]
[connection signal="timeout" from="LookoutTimer" to="." method="_on_lookout_timer_timeout"]
